# SIMPLE-terminal-app-Rust

./: Cargo.toml
src/: agenda_contacto.rs  contacto.rs  imprimir.rs  main.rs
src/models/: local.rs
src/models/local/: contacto.rs
src/opciones_agenda_contacto/: agregar.rs  buscar.rs  editar.rs  eliminar.rs  mod.rs  mostrar_todos.rs  opciones.rs
src/utilidades/: input.rs  terminal.rs
